treewide: Adapt for ShelbyHell.
Signed-off-by: Alexey Shelby <shelbyhell@proton.me>

--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -1,27 +1,7 @@
 Host *
   AddKeysToAgent yes
 
-Host raspibox
-  HostName raspibox
-  User gotenks
-
-Host oracle
-  HostName ssh.notyash.dev
-  User gotenks
-  IdentitiesOnly yes
-
 Host AOSPA-Gerrit
   HostName gerrit.aospa.co
-  User gotenksIN
+  User ShelbyHell
   IdentitiesOnly yes
-
-Host arter97
-  HostName tun.arter97.com
-  User gotenks
-  Port 2497
-  IdentitiesOnly yes
-
-Host lmo_build
-  HostName libremobileos.com
-  User gotenks
-  Port 50196
